2012-12-07  JJ Allaire <jj@rstudio.org>

        * src/AttributesGen.cpp: use __ prefix for variables in generated
        code; add RNGScope for attribute exported functions.

2012-12-07 Romain Francois <romain@r-enthusiasts.com>

        * src/random.cpp: instantiations of random generators here
        * include/Rcpp/stats/random/random.h: only have declarations of 
        random generators here. Rework the Generator template so that 
        it inherits RNGScope to provide automatic calls to GetRNGstate
        and PutRNGstate
        
2012-12-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: revert DOS newlines; use new shared library name
        for each rebuild in sourceCpp
        * src/Attributes.cpp: revert DOS newlines; define RCPP_NO_SUGAR;
        use new shared library name for each rebuild in sourceCpp
        * src/AttributesGen.cpp: revert DOS newlines; convert 'try-error'
        to exception for C++ interfaces
        * src/AttributesGen.h: 'try-error' to exception for C++ interfaces
        * src/AttributesParser.cpp: revert DOS newlines; define RCPP_NO_SUGAR
        * src/RcppCommon.cpp: conversion from exeption to 'try-error'
        * include/Rcpp/exceptions.h: conversion from exeption to 'try-error'
        * include/Rcpp/preprocessor.h: add END_RCPP_RETURN_ERROR macro
        to convert exceptions to 'try-error' objects
        * include/Rcpp/iostream/Rstreambuf.h: revert DOS newlines
        * DESCRIPTION: bump version to 0.10.1.5
  
2012-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Added include of cstdlib to compile 

2012-12-06 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/api/meat/Environment.h: meat for Environment
        * src/exceptions.cpp: include config so that it knows that Rcpp can 
        demangle
        * unitTests/runit.environments.R: using sourceCpp
        * src/Environment.cpp: less includes
        * src/Evaluator.cpp: less includes
