@@ -1,3 +1,9 @@
+2012-12-08 Romain Francois <romain@r-enthusiasts.com>
+
+        * src/Timer.cpp: implementation of Timer
+        * include/Rcpp/Benchmark/Timer.h: internal performance timer, based on
+        the code from the microbenchmark package. 
+
 2012-12-07  JJ Allaire <jj@rstudio.org>
 
         * src/AttributesGen.cpp: use __ prefix for variables in generated
